[package]
name = "Queue_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.5"
rand = "0.10.1"
toml = "1.1.2+spec-1.1.0"
serde = { version = "1.0.228", features = ["derive"] }